tests/ui/unsized-locals/unsized-param-in-fn-ptr-issue-115845.stderr
error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/unsized-param-in-fn-ptr-issue-115845.rs:4:13
   |
LL | fn bad() -> extern "C" fn(([u8],)) {
   |             ^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: within `([u8],)`, the trait `Sized` is not implemented for `[u8]`
   = note: required because it appears within the type `([u8],)`
   = note: all function arguments must have a statically known size

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/unsized-param-in-fn-ptr-issue-115845.rs:7:15
   |
LL | fn bad2() -> (fn() -> str) {
   |               ^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
   = note: the return type of a function must have a statically known size

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
